Fix GitHub Actions workflow to skip native project build on Linux
The native libraries are already built in separate OS-specific jobs.
The test-and-publish job should only build the C# projects, not the
Visual Studio native project which requires Windows/MSBuild.

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -89,10 +89,14 @@ jobs:
       run: chmod +x src/LemonNet/runtimes/linux-x64/native/lemon_wrapper.so
     
     - name: Restore dependencies
-      run: dotnet restore
+      run: |
+        dotnet restore src/LemonNet/LemonNet.csproj
+        dotnet restore tests/LemonNet.Tests/LemonNet.Tests.csproj
     
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: |
+        dotnet build src/LemonNet/LemonNet.csproj --configuration Release --no-restore
+        dotnet build tests/LemonNet.Tests/LemonNet.Tests.csproj --configuration Release --no-restore
     
     - name: Test
       run: |
