--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -7,6 +7,10 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+permissions:
+  contents: write  # Needed for creating releases
+  packages: write  # Needed for publishing packages
+
 env:
   DOTNET_VERSION: '9.0.x'
   NUGET_PACKAGE_NAME: 'LemonNet'
