--- a/examples/LemonNet.Example/LemonNet.Example.csproj
+++ b/examples/LemonNet.Example/LemonNet.Example.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LemonNet" Version="0.1.*" />
+    <PackageReference Include="LemonNet" Version="0.1.250821.840" />
   </ItemGroup>
 
 </Project>
