Refactor max flow algorithms and update project files
Added a new template function `run_max_flow_algorithm` in `lemon_wrapper.cpp` to generalize max flow calculations. Updated `lemon_edmonds_karp` and `lemon_preflow` to utilize this new function, enhancing code reuse.

Modified `LemonNet.csproj` to remove outdated native file paths and include new paths for native DLL and SO files, ensuring proper packaging for Windows and Linux. Updated post-build events for correct library copying.

Binary files `lemon_wrapper.so` and `lemon_wrapper.dll` were also updated to reflect these changes.

Update native library paths and build process

- Updated `CLAUDE.md` to reflect new output paths for
  `lemon_wrapper.dll` and `lemon_wrapper.so` for Windows
  and Linux, including checks for their existence.

- Modified `build.sh` to create a new output directory
  structure for Linux builds and added configuration
  parameters for build types.

- Removed the output copy target in `LemonWrapper.Native.vcxproj`
  and added a new target to build the Linux library via WSL.

- Introduced a new template function `run_max_flow_algorithm`
  in `lemon_wrapper.cpp` to streamline max flow algorithm
  implementations.

- Updated `LemonNet.csproj` to include new paths for native
  libraries in the NuGet package.

- Deleted binary files `lemon_wrapper.so` and `lemon_wrapper.dll`
  to reflect changes in library management.

- Added `build-linux.bat` to facilitate building the Linux
  native library using WSL for cross-platform support.

--- a/src/LemonNet.Native/LemonWrapper.Native.vcxproj
+++ b/src/LemonNet.Native/LemonWrapper.Native.vcxproj
@@ -104,12 +104,14 @@
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   
-  <!-- Copy output to LemonNet runtimes folder -->
-  <Target Name="CopyToRuntimes" AfterTargets="Build">
-    <PropertyGroup>
-      <RuntimeDir>$(SolutionDir)src\LemonNet\runtimes\win-x64\native\</RuntimeDir>
-    </PropertyGroup>
-    <MakeDir Directories="$(RuntimeDir)" />
-    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(RuntimeDir)" />
+  <!-- Build Linux native library via WSL after Windows build -->
+  <Target Name="BuildLinuxNative" AfterTargets="Build">
+    <Message Text="Building Linux native library via WSL..." Importance="high" />
+    <Exec Command="&quot;$(ProjectDir)build-linux.bat&quot; $(Configuration)" 
+          ContinueOnError="true"
+          ConsoleToMSBuild="true">
+      <Output TaskParameter="ExitCode" PropertyName="LinuxBuildExitCode" />
+    </Exec>
+    <Message Text="Linux build completed (exit code: $(LinuxBuildExitCode))" Importance="high" />
   </Target>
 </Project>
