Update CI workflow and document native binary strategy
Modified the Linux build command in `publish-nuget.yml` to use the "Release" configuration. Added a new section in `BUILD-AND-PACKAGING.md` detailing the native binary management strategy for Windows and Linux, covering build processes, CI/CD pipeline, NuGet package structure, platform detection, developer setup, troubleshooting, design decisions, and future considerations.

--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Build native library (Linux)
       run: |
         chmod +x build.sh
-        ./build.sh
+        ./build.sh Release
     
     - name: Upload Linux native library
       uses: actions/upload-artifact@v4
