--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -100,6 +100,11 @@ jobs:
         name: windows-native
         path: src/LemonNet/bin/Release/net9.0/
     
+    - name: Also place Windows native library where the project expects it for packing
+      run: |
+        mkdir -p src/LemonNet.Native/bin/x64/Release
+        cp src/LemonNet/bin/Release/net9.0/lemon_wrapper.dll src/LemonNet.Native/bin/x64/Release/
+    
     - name: Set permissions for native library
       run: chmod +x src/LemonNet/bin/Release/net9.0/lemon_wrapper.so
     
