Update NuGet configuration and project files
- Added a new package source `test-local` in `NuGet.config`.
- Updated `LemonNet` package version in `LemonNet.Example.NuGet.csproj`.
- Clarified comments and added packing for native DLLs in `LemonNet.csproj`.
- Created a new `Program.cs` file with a console output.
- Added `TestPkg.csproj` as a console application targeting .NET 9.0.

--- a/src/LemonNet/LemonNet.csproj
+++ b/src/LemonNet/LemonNet.csproj
@@ -40,22 +40,34 @@
     </ProjectReference>
   </ItemGroup>
   
-  <!-- Windows: Copy native DLL to output directory -->
+  <!-- Windows: Copy native DLL to output directory when on Windows -->
   <ItemGroup Condition="'$(OS)' == 'Windows_NT'">
     <None Include="..\LemonNet.Native\bin\x64\$(Configuration)\lemon_wrapper.dll" 
           Condition="Exists('..\LemonNet.Native\bin\x64\$(Configuration)\lemon_wrapper.dll')">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Visible>false</Visible>
-      <Pack>true</Pack>
-      <PackagePath>lib\net9.0</PackagePath>
     </None>
     <!-- Include native PDB for debugging -->
     <None Include="..\LemonNet.Native\bin\x64\$(Configuration)\lemon_wrapper.pdb" 
           Condition="Exists('..\LemonNet.Native\bin\x64\$(Configuration)\lemon_wrapper.pdb')">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Visible>false</Visible>
+    </None>
+  </ItemGroup>
+  
+  <!-- Pack Windows native DLL (no OS condition so it works from any build platform) -->
+  <ItemGroup>
+    <None Include="..\LemonNet.Native\bin\x64\$(Configuration)\lemon_wrapper.dll" 
+          Condition="Exists('..\LemonNet.Native\bin\x64\$(Configuration)\lemon_wrapper.dll')">
       <Pack>true</Pack>
       <PackagePath>lib\net9.0</PackagePath>
+      <Visible>false</Visible>
+    </None>
+    <None Include="..\LemonNet.Native\bin\x64\$(Configuration)\lemon_wrapper.pdb" 
+          Condition="Exists('..\LemonNet.Native\bin\x64\$(Configuration)\lemon_wrapper.pdb')">
+      <Pack>true</Pack>
+      <PackagePath>lib\net9.0</PackagePath>
+      <Visible>false</Visible>
     </None>
   </ItemGroup>
   
