--- a/src/LemonNet/LemonNet.targets
+++ b/src/LemonNet/LemonNet.targets
@@ -2,15 +2,15 @@
 <Project>
   <!-- Copy native binaries to output directory -->
   <ItemGroup>
-    <None Include="$(MSBuildThisFileDirectory)..\..\lib\net9.0\lemon_wrapper.dll" Condition="'$(OS)' == 'Windows_NT' and Exists('$(MSBuildThisFileDirectory)..\..\lib\net9.0\lemon_wrapper.dll')">
+    <None Include="$(MSBuildThisFileDirectory)..\lib\net9.0\lemon_wrapper.dll" Condition="'$(OS)' == 'Windows_NT' and Exists('$(MSBuildThisFileDirectory)..\lib\net9.0\lemon_wrapper.dll')">
       <Link>lemon_wrapper.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MSBuildThisFileDirectory)..\..\lib\net9.0\lemon_wrapper.pdb" Condition="'$(OS)' == 'Windows_NT' and Exists('$(MSBuildThisFileDirectory)..\..\lib\net9.0\lemon_wrapper.pdb')">
+    <None Include="$(MSBuildThisFileDirectory)..\lib\net9.0\lemon_wrapper.pdb" Condition="'$(OS)' == 'Windows_NT' and Exists('$(MSBuildThisFileDirectory)..\lib\net9.0\lemon_wrapper.pdb')">
       <Link>lemon_wrapper.pdb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="$(MSBuildThisFileDirectory)..\..\lib\net9.0\lemon_wrapper.so" Condition="'$(OS)' != 'Windows_NT' and Exists('$(MSBuildThisFileDirectory)..\..\lib\net9.0\lemon_wrapper.so')">
+    <None Include="$(MSBuildThisFileDirectory)..\lib\net9.0\lemon_wrapper.so" Condition="'$(OS)' != 'Windows_NT' and Exists('$(MSBuildThisFileDirectory)..\lib\net9.0\lemon_wrapper.so')">
       <Link>lemon_wrapper.so</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
